--- a/Jsons/language/de.json
+++ b/Jsons/language/de.json
@@ -327,16 +327,16 @@
   "time_region": "Region",
   "time_region_system": "System",
   "time_region_custom": "Brauch",
-  "time_region_date_order": "Datumsreihenfolge",
+  "time_region_date_order": "Termine",
   "time_region_date_order_dmy": "Tag-Monat-Jahr",
   "time_region_date_order_mdy": "Monat-Tag-Jahr",
   "time_region_date_order_ymd": "Jahr-Monat-Tag",
-  "time_region_number_format": "Zahlenformat",
-  "time_region_year_suffixes": "Jahreszusätze",
+  "time_region_number_format": "Zahlen",
+  "time_region_year_suffixes": "Jahre",
   "time_region_year_suffixes_bmk": "B/M/K",
   "time_region_year_suffixes_gama": "Ga/Ma",
   "time_region_year_suffixes_mrd": "Mrd/Mio/T",
-  "time_region_week_starts": "Die Woche beginnt",
+  "time_region_week_starts": "Woche",
   "time_region_week_starts_monday": "Montag",
   "time_region_week_starts_sunday": "Sonntag",
   "settings_parameters": "Parameter",
