--- a/Jsons/language/en.json
+++ b/Jsons/language/en.json
@@ -327,16 +327,16 @@
   "time_region": "Region",
   "time_region_system": "system",
   "time_region_custom": "custom",
-  "time_region_date_order": "Date order",
+  "time_region_date_order": "Dates",
   "time_region_date_order_dmy": "Day-Month-Year",
   "time_region_date_order_mdy": "Month-Day-Year",
   "time_region_date_order_ymd": "Year-Month-Day",
-  "time_region_number_format": "Number format",
-  "time_region_year_suffixes": "Year suffixes",
+  "time_region_number_format": "Numbers",
+  "time_region_year_suffixes": "Years",
   "time_region_year_suffixes_bmk": "B/M/K",
   "time_region_year_suffixes_gama": "Ga/Ma",
   "time_region_year_suffixes_mrd": "Mrd/Mio/T",
-  "time_region_week_starts": "Week starts",
+  "time_region_week_starts": "Week",
   "time_region_week_starts_monday": "Monday",
   "time_region_week_starts_sunday": "Sunday",
   "settings_parameters": "Parameters",
