--- a/Jsons/language/es.json
+++ b/Jsons/language/es.json
@@ -327,16 +327,16 @@
   "time_region": "Región",
   "time_region_system": "sistema",
   "time_region_custom": "costumbre",
-  "time_region_date_order": "Orden de fecha",
+  "time_region_date_order": "Fechas",
   "time_region_date_order_dmy": "Día-Mes-Año",
   "time_region_date_order_mdy": "Mes-Día-Año",
   "time_region_date_order_ymd": "Año-Mes-Día",
-  "time_region_number_format": "Formato de número",
-  "time_region_year_suffixes": "Sufijos de año",
+  "time_region_number_format": "Números",
+  "time_region_year_suffixes": "Años",
   "time_region_year_suffixes_bmk": "Negro/Marrón/K",
   "time_region_year_suffixes_gama": "Ga/Ma",
   "time_region_year_suffixes_mrd": "Sr./Mio/T",
-  "time_region_week_starts": "La semana comienza",
+  "time_region_week_starts": "Semana",
   "time_region_week_starts_monday": "Lunes",
   "time_region_week_starts_sunday": "Domingo",
   "settings_parameters": "Parámetros",
