--- a/Jsons/language/fr.json
+++ b/Jsons/language/fr.json
@@ -327,16 +327,16 @@
   "time_region": "Région",
   "time_region_system": "système",
   "time_region_custom": "coutume",
-  "time_region_date_order": "Ordre des dates",
+  "time_region_date_order": "Dates",
   "time_region_date_order_dmy": "Jour-Mois-Année",
   "time_region_date_order_mdy": "Mois-Jour-Année",
   "time_region_date_order_ymd": "Année-Mois-Jour",
-  "time_region_number_format": "Format numérique",
-  "time_region_year_suffixes": "Suffixes d'année",
+  "time_region_number_format": "Nombres",
+  "time_region_year_suffixes": "Années",
   "time_region_year_suffixes_bmk": "B/M/K",
   "time_region_year_suffixes_gama": "Ga/Ma",
   "time_region_year_suffixes_mrd": "Mrd/Mio/T",
-  "time_region_week_starts": "La semaine commence",
+  "time_region_week_starts": "Semaine",
   "time_region_week_starts_monday": "Lundi",
   "time_region_week_starts_sunday": "Dimanche",
   "settings_parameters": "Paramètres",
