--- a/Jsons/language/hi.json
+++ b/Jsons/language/hi.json
@@ -327,16 +327,16 @@
   "time_region": "क्षेत्र",
   "time_region_system": "प्रणाली",
   "time_region_custom": "रिवाज़",
-  "time_region_date_order": "दिनांक क्रम",
+  "time_region_date_order": "खजूर",
   "time_region_date_order_dmy": "दिन-माह-वर्ष",
   "time_region_date_order_mdy": "महीना दिन साल",
   "time_region_date_order_ymd": "साल महीना दिन",
-  "time_region_number_format": "संख्या स्वरूप",
-  "time_region_year_suffixes": "वर्ष प्रत्यय",
+  "time_region_number_format": "नंबर",
+  "time_region_year_suffixes": "साल",
   "time_region_year_suffixes_bmk": "बी/एम/के",
   "time_region_year_suffixes_gama": "गा/मा",
   "time_region_year_suffixes_mrd": "Mrd/Mio/T",
-  "time_region_week_starts": "सप्ताह शुरू होता है",
+  "time_region_week_starts": "सप्ताह",
   "time_region_week_starts_monday": "सोमवार",
   "time_region_week_starts_sunday": "रविवार",
   "settings_parameters": "पैरामीटर",
