--- a/Jsons/language/it.json
+++ b/Jsons/language/it.json
@@ -327,16 +327,16 @@
   "time_region": "Regione",
   "time_region_system": "sistema",
   "time_region_custom": "costume",
-  "time_region_date_order": "Ordine di data",
+  "time_region_date_order": "Date",
   "time_region_date_order_dmy": "Giorno-Mese-Anno",
   "time_region_date_order_mdy": "Mese-Giorno-Anno",
   "time_region_date_order_ymd": "Anno-Mese-Giorno",
-  "time_region_number_format": "Formato numerico",
-  "time_region_year_suffixes": "Suffissi dell'anno",
+  "time_region_number_format": "Numeri",
+  "time_region_year_suffixes": "Anni",
   "time_region_year_suffixes_bmk": "B/M/K",
   "time_region_year_suffixes_gama": "Ga/Ma",
   "time_region_year_suffixes_mrd": "Mrd/Mio/T",
-  "time_region_week_starts": "La settimana inizia",
+  "time_region_week_starts": "Settimana",
   "time_region_week_starts_monday": "Lunedi",
   "time_region_week_starts_sunday": "Domenica",
   "settings_parameters": "Parametri",
