--- a/Jsons/language/ja.json
+++ b/Jsons/language/ja.json
@@ -327,16 +327,16 @@
   "time_region": "地域",
   "time_region_system": "システム",
   "time_region_custom": "カスタム",
-  "time_region_date_order": "日付順",
+  "time_region_date_order": "日付",
   "time_region_date_order_dmy": "日-月-年",
   "time_region_date_order_mdy": "月-日-年",
   "time_region_date_order_ymd": "年-月-日",
-  "time_region_number_format": "数値形式",
-  "time_region_year_suffixes": "年接尾辞",
+  "time_region_number_format": "数字",
+  "time_region_year_suffixes": "年",
   "time_region_year_suffixes_bmk": "白/中/ケ",
   "time_region_year_suffixes_gama": "ガ/マ",
   "time_region_year_suffixes_mrd": "Mrd/Mio/T",
-  "time_region_week_starts": "週の始まり",
+  "time_region_week_starts": "週",
   "time_region_week_starts_monday": "月曜日",
   "time_region_week_starts_sunday": "日曜日",
   "settings_parameters": "パラメータ",
