--- a/Jsons/language/nl.json
+++ b/Jsons/language/nl.json
@@ -327,16 +327,16 @@
   "time_region": "Regio",
   "time_region_system": "systeem",
   "time_region_custom": "aangepast",
-  "time_region_date_order": "Datumvolgorde",
+  "time_region_date_order": "Datums",
   "time_region_date_order_dmy": "Dag-Maand-Jaar",
   "time_region_date_order_mdy": "Maand-Dag-Jaar",
   "time_region_date_order_ymd": "Jaar-Maand-Dag",
-  "time_region_number_format": "Getalnotatie",
-  "time_region_year_suffixes": "Jaarachtervoegsels",
+  "time_region_number_format": "Getallen",
+  "time_region_year_suffixes": "Jaren",
   "time_region_year_suffixes_bmk": "B/M/K",
   "time_region_year_suffixes_gama": "Ga/Ma",
   "time_region_year_suffixes_mrd": "Mrd/Mio/T",
-  "time_region_week_starts": "De week begint",
+  "time_region_week_starts": "Week",
   "time_region_week_starts_monday": "Maandag",
   "time_region_week_starts_sunday": "Zondag",
   "settings_parameters": "Parameters",
