--- a/Jsons/language/pl.json
+++ b/Jsons/language/pl.json
@@ -327,16 +327,16 @@
   "time_region": "Region",
   "time_region_system": "system",
   "time_region_custom": "zwyczaj",
-  "time_region_date_order": "Kolejność dat",
+  "time_region_date_order": "Daty",
   "time_region_date_order_dmy": "Dzień-Miesiąc-Rok",
   "time_region_date_order_mdy": "Miesiąc-Dzień-Rok",
   "time_region_date_order_ymd": "Rok-Miesiąc-Dzień",
-  "time_region_number_format": "Format liczbowy",
-  "time_region_year_suffixes": "Sufiksy roku",
+  "time_region_number_format": "Takty muzyczne",
+  "time_region_year_suffixes": "Lata",
   "time_region_year_suffixes_bmk": "B/M/K",
   "time_region_year_suffixes_gama": "Ga/Ma",
   "time_region_year_suffixes_mrd": "Pan/Mio/T",
-  "time_region_week_starts": "Tydzień się zaczyna",
+  "time_region_week_starts": "Tydzień",
   "time_region_week_starts_monday": "Poniedziałek",
   "time_region_week_starts_sunday": "Niedziela",
   "settings_parameters": "Parametry",
