--- a/Jsons/language/ru.json
+++ b/Jsons/language/ru.json
@@ -327,16 +327,16 @@
   "time_region": "Область",
   "time_region_system": "система",
   "time_region_custom": "обычай",
-  "time_region_date_order": "Дата заказа",
+  "time_region_date_order": "Даты",
   "time_region_date_order_dmy": "День-Месяц-Год",
   "time_region_date_order_mdy": "Месяц-День-Год",
   "time_region_date_order_ymd": "Год-Месяц-День",
-  "time_region_number_format": "Формат чисел",
-  "time_region_year_suffixes": "суффиксы года",
+  "time_region_number_format": "Числа",
+  "time_region_year_suffixes": "Годы",
   "time_region_year_suffixes_bmk": "Б/М/К",
   "time_region_year_suffixes_gama": "Га/Ма",
   "time_region_year_suffixes_mrd": "Mrd/Mio/T",
-  "time_region_week_starts": "Неделя начинается",
+  "time_region_week_starts": "Неделя",
   "time_region_week_starts_monday": "Понедельник",
   "time_region_week_starts_sunday": "Воскресенье",
   "settings_parameters": "Параметры",
