--- a/Jsons/language/sv.json
+++ b/Jsons/language/sv.json
@@ -327,16 +327,16 @@
   "time_region": "Område",
   "time_region_system": "system",
   "time_region_custom": "beställnings-",
-  "time_region_date_order": "Datumordning",
+  "time_region_date_order": "Datum",
   "time_region_date_order_dmy": "Dag-Månad-År",
   "time_region_date_order_mdy": "Månad-Dag-År",
   "time_region_date_order_ymd": "År-Månad-Dag",
-  "time_region_number_format": "Nummerformat",
-  "time_region_year_suffixes": "Årssuffix",
+  "time_region_number_format": "Tal",
+  "time_region_year_suffixes": "År",
   "time_region_year_suffixes_bmk": "B/M/K",
   "time_region_year_suffixes_gama": "Georgia/Massachusetts",
   "time_region_year_suffixes_mrd": "Herr/Mio/T",
-  "time_region_week_starts": "Veckan börjar",
+  "time_region_week_starts": "Vecka",
   "time_region_week_starts_monday": "måndag",
   "time_region_week_starts_sunday": "söndag",
   "settings_parameters": "Parametrar",
