--- a/Jsons/language/uk.json
+++ b/Jsons/language/uk.json
@@ -327,16 +327,16 @@
   "time_region": "Регіон",
   "time_region_system": "система",
   "time_region_custom": "звичай",
-  "time_region_date_order": "Порядок дат",
+  "time_region_date_order": "Дати",
   "time_region_date_order_dmy": "День-Місяць-Рік",
   "time_region_date_order_mdy": "Місяць-День-Рік",
   "time_region_date_order_ymd": "Рік-Місяць-День",
-  "time_region_number_format": "Числовий формат",
-  "time_region_year_suffixes": "Суфікси року",
+  "time_region_number_format": "Числа",
+  "time_region_year_suffixes": "Роки",
   "time_region_year_suffixes_bmk": "Б/М/К",
   "time_region_year_suffixes_gama": "Га/Ма",
   "time_region_year_suffixes_mrd": "Мрд/Міо/Т",
-  "time_region_week_starts": "Початок тижня",
+  "time_region_week_starts": "Тиждень",
   "time_region_week_starts_monday": "Понеділок",
   "time_region_week_starts_sunday": "Неділя",
   "settings_parameters": "Параметри",
