--- a/Jsons/language/zh.json
+++ b/Jsons/language/zh.json
@@ -327,16 +327,16 @@
   "time_region": "地区",
   "time_region_system": "系统",
   "time_region_custom": "风俗",
-  "time_region_date_order": "日期顺序",
+  "time_region_date_order": "日期",
   "time_region_date_order_dmy": "日-月-年",
   "time_region_date_order_mdy": "月-日-年",
   "time_region_date_order_ymd": "年-月-日",
-  "time_region_number_format": "数字格式",
-  "time_region_year_suffixes": "年份后缀",
+  "time_region_number_format": "数字",
+  "time_region_year_suffixes": "年",
   "time_region_year_suffixes_bmk": "B/M/K",
   "time_region_year_suffixes_gama": "Ga/Ma",
   "time_region_year_suffixes_mrd": "Mrd/Mio/T",
-  "time_region_week_starts": "一周开始",
+  "time_region_week_starts": "星期",
   "time_region_week_starts_monday": "周一",
   "time_region_week_starts_sunday": "星期日",
   "settings_parameters": "参数",
