--- a/Jsons/language/en.json
+++ b/Jsons/language/en.json
@@ -339,6 +339,7 @@
   "time_region_week_starts": "Week",
   "time_region_week_starts_monday": "Monday",
   "time_region_week_starts_sunday": "Sunday",
+  "settings_source_academy": "Academy",
   "settings_parameters": "Parameters",
   "controls_mouse": "Mouse",
   "controls_mouse_drag": "Drag",
