--- a/Jsons/language/es.json
+++ b/Jsons/language/es.json
@@ -339,6 +339,7 @@
   "time_region_week_starts": "Semana",
   "time_region_week_starts_monday": "Lunes",
   "time_region_week_starts_sunday": "Domingo",
+  "settings_source_academy": "Academia",
   "settings_parameters": "Parámetros",
   "controls_mouse": "Ratón",
   "controls_mouse_drag": "Arrastrar",
