--- a/Jsons/language/fr.json
+++ b/Jsons/language/fr.json
@@ -339,6 +339,7 @@
   "time_region_week_starts": "Semaine",
   "time_region_week_starts_monday": "Lundi",
   "time_region_week_starts_sunday": "Dimanche",
+  "settings_source_academy": "Académie",
   "settings_parameters": "Paramètres",
   "controls_mouse": "Souris",
   "controls_mouse_drag": "Traîner",
