--- a/Jsons/language/hi.json
+++ b/Jsons/language/hi.json
@@ -339,6 +339,7 @@
   "time_region_week_starts": "सप्ताह",
   "time_region_week_starts_monday": "सोमवार",
   "time_region_week_starts_sunday": "रविवार",
+  "settings_source_academy": "अकादमी",
   "settings_parameters": "पैरामीटर",
   "controls_mouse": "चूहा",
   "controls_mouse_drag": "खींचना",
