--- a/Jsons/language/it.json
+++ b/Jsons/language/it.json
@@ -339,6 +339,7 @@
   "time_region_week_starts": "Settimana",
   "time_region_week_starts_monday": "Lunedi",
   "time_region_week_starts_sunday": "Domenica",
+  "settings_source_academy": "Accademia",
   "settings_parameters": "Parametri",
   "controls_mouse": "Topo",
   "controls_mouse_drag": "Lagna",
