--- a/Jsons/language/ja.json
+++ b/Jsons/language/ja.json
@@ -339,6 +339,7 @@
   "time_region_week_starts": "週",
   "time_region_week_starts_monday": "月曜日",
   "time_region_week_starts_sunday": "日曜日",
+  "settings_source_academy": "アカデミー",
   "settings_parameters": "パラメータ",
   "controls_mouse": "ねずみ",
   "controls_mouse_drag": "ドラッグ",
