--- a/Jsons/language/nl.json
+++ b/Jsons/language/nl.json
@@ -339,6 +339,7 @@
   "time_region_week_starts": "Week",
   "time_region_week_starts_monday": "Maandag",
   "time_region_week_starts_sunday": "Zondag",
+  "settings_source_academy": "Academie",
   "settings_parameters": "Parameters",
   "controls_mouse": "Muis",
   "controls_mouse_drag": "Sleuren",
