--- a/Jsons/language/pl.json
+++ b/Jsons/language/pl.json
@@ -339,6 +339,7 @@
   "time_region_week_starts": "Tydzień",
   "time_region_week_starts_monday": "Poniedziałek",
   "time_region_week_starts_sunday": "Niedziela",
+  "settings_source_academy": "Akademia",
   "settings_parameters": "Parametry",
   "controls_mouse": "Mysz",
   "controls_mouse_drag": "Ciągnąć",
