--- a/Jsons/language/ru.json
+++ b/Jsons/language/ru.json
@@ -339,6 +339,7 @@
   "time_region_week_starts": "Неделя",
   "time_region_week_starts_monday": "Понедельник",
   "time_region_week_starts_sunday": "Воскресенье",
+  "settings_source_academy": "Академия",
   "settings_parameters": "Параметры",
   "controls_mouse": "Мышь",
   "controls_mouse_drag": "Тащить",
