--- a/Jsons/language/sv.json
+++ b/Jsons/language/sv.json
@@ -339,6 +339,7 @@
   "time_region_week_starts": "Vecka",
   "time_region_week_starts_monday": "måndag",
   "time_region_week_starts_sunday": "söndag",
+  "settings_source_academy": "Akademi",
   "settings_parameters": "Parametrar",
   "controls_mouse": "Mus",
   "controls_mouse_drag": "Dra",
