--- a/Jsons/language/uk.json
+++ b/Jsons/language/uk.json
@@ -339,6 +339,7 @@
   "time_region_week_starts": "Тиждень",
   "time_region_week_starts_monday": "Понеділок",
   "time_region_week_starts_sunday": "Неділя",
+  "settings_source_academy": "Академія",
   "settings_parameters": "Параметри",
   "controls_mouse": "Миша",
   "controls_mouse_drag": "Перетягування",
