--- a/Jsons/language/zh.json
+++ b/Jsons/language/zh.json
@@ -339,6 +339,7 @@
   "time_region_week_starts": "星期",
   "time_region_week_starts_monday": "周一",
   "time_region_week_starts_sunday": "星期日",
+  "settings_source_academy": "学院",
   "settings_parameters": "参数",
   "controls_mouse": "老鼠",
   "controls_mouse_drag": "拖",
