--- a/Jsons/language/de.json
+++ b/Jsons/language/de.json
@@ -339,6 +339,7 @@
   "time_region_week_starts": "Woche",
   "time_region_week_starts_monday": "Montag",
   "time_region_week_starts_sunday": "Sonntag",
+  "settings_source_academy": "Akademie",
   "settings_parameters": "Parameter",
   "controls_mouse": "Maus",
   "controls_mouse_drag": "Ziehen",
